// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Game Play > (1) Player 3792_Matthew places tile [9C] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [4H] | 
P8196_Nate | $6000 | [7F] [10B] [11A] [7A] [11F] [4C] | 

P3792_Matthew [End Turn]
`;

exports[`Game Play > (2) Player 3792_Matthew ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [4H] [6D] | 
P8196_Nate | $6000 | [7F] [10B] [11A] [7A] [11F] [4C] | 

P8196_Nate [Choose Tile: [7F] [10B] [11A] [7A] [11F] [4C]]
`;

exports[`Game Play > (3) Player 8196_Nate places tile [4C] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [4H] [6D] | 
P8196_Nate | $6000 | [7F] [10B] [11A] [7A] [11F] | 

P8196_Nate [End Turn]
`;

exports[`Game Play > (4) Player 8196_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [4H] [6D] | 
P8196_Nate | $6000 | [7F] [10B] [11A] [7A] [11F] [2F] | 

P3792_Matthew [Choose Tile: [6A] [2A] [7C] [2E] [4H] [6D]]
`;

exports[`Game Play > (5) Player 3792_Matthew places tile [4H] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [6D] | 
P8196_Nate | $6000 | [7F] [10B] [11A] [7A] [11F] [2F] | 

P3792_Matthew [End Turn]
`;

exports[`Game Play > (6) Player 3792_Matthew ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [6D] [1H] | 
P8196_Nate | $6000 | [7F] [10B] [11A] [7A] [11F] [2F] | 

P8196_Nate [Choose Tile: [7F] [10B] [11A] [7A] [11F] [2F]]
`;

exports[`Game Play > (7) Player 8196_Nate places tile [11A] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - 0 - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [6D] [1H] | 
P8196_Nate | $6000 | [7F] [10B] [7A] [11F] [2F] | 

P8196_Nate [End Turn]
`;

exports[`Game Play > (8) Player 8196_Nate ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - 0 - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [6D] [1H] | 
P8196_Nate | $6000 | [7F] [10B] [7A] [11F] [2F] [4D] | 

P3792_Matthew [Choose Tile: [6A] [2A] [7C] [2E] [6D] [1H]]
`;

exports[`Game Play > (9) Player 3792_Matthew places tile [6D] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - 0 - - - - 0 - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [1H] | 
P8196_Nate | $6000 | [7F] [10B] [7A] [11F] [2F] [4D] | 

P3792_Matthew [End Turn]
`;

exports[`Game Play > (10) Player 3792_Matthew ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - 0 - - - - 0 - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [1H] [5F] | 
P8196_Nate | $6000 | [7F] [10B] [7A] [11F] [2F] [4D] | 

P8196_Nate [Choose Tile: [7F] [10B] [7A] [11F] [2F] [4D]]
`;

exports[`Game Play > (11) Player 8196_Nate places tile [4D] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - 0 - - - - 0 - - -
 - - - 0 - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [1H] [5F] | 
P8196_Nate | $6000 | [7F] [10B] [7A] [11F] [2F] | 

P8196_Nate [Choose Hotel: A C F I W T L]
`;

exports[`Game Play > (12) Player 8196_Nate starts Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - - - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [1H] [5F] | 
P8196_Nate | $6000 | [7F] [10B] [7A] [11F] [2F] | T:1

P8196_Nate [Choose Shares: T] [End Turn]
`;

exports[`Game Play > (13) Player 8196_Nate purchases Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - - - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [1H] [5F] | 
P8196_Nate | $5800 | [7F] [10B] [7A] [11F] [2F] | T:2

P8196_Nate [Choose Shares: T] [End Turn]
`;

exports[`Game Play > (14) Player 8196_Nate purchases Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - - - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [1H] [5F] | 
P8196_Nate | $5600 | [7F] [10B] [7A] [11F] [2F] | T:3

P8196_Nate [Choose Shares: T] [End Turn]
`;

exports[`Game Play > (15) Player 8196_Nate purchases Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - - - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [1H] [5F] | 
P8196_Nate | $5400 | [7F] [10B] [7A] [11F] [2F] | T:4

P8196_Nate [End Turn]
`;

exports[`Game Play > (16) Player 8196_Nate ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - - - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [7C] [2E] [1H] [5F] | 
P8196_Nate | $5400 | [7F] [10B] [7A] [11F] [2F] [6B] | T:4

P3792_Matthew [Choose Tile: [6A] [2A] [7C] [2E] [1H] [5F]]
`;

exports[`Game Play > (17) Player 3792_Matthew places tile [7C] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $6000 | [6A] [2A] [2E] [1H] [5F] | 
P8196_Nate | $5400 | [7F] [10B] [7A] [11F] [2F] [6B] | T:4

P3792_Matthew [Choose Shares: T] [End Turn]
`;

exports[`Game Play > (18) Player 3792_Matthew purchases Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5800 | [6A] [2A] [2E] [1H] [5F] | T:1
P8196_Nate | $5400 | [7F] [10B] [7A] [11F] [2F] [6B] | T:4

P3792_Matthew [Choose Shares: T] [End Turn]
`;

exports[`Game Play > (19) Player 3792_Matthew purchases Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5600 | [6A] [2A] [2E] [1H] [5F] | T:2
P8196_Nate | $5400 | [7F] [10B] [7A] [11F] [2F] [6B] | T:4

P3792_Matthew [Choose Shares: T] [End Turn]
`;

exports[`Game Play > (20) Player 3792_Matthew purchases Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5400 | [6A] [2A] [2E] [1H] [5F] | T:3
P8196_Nate | $5400 | [7F] [10B] [7A] [11F] [2F] [6B] | T:4

P3792_Matthew [End Turn]
`;

exports[`Game Play > (21) Player 3792_Matthew ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5400 | [6A] [2A] [2E] [1H] [5F] [4G] | T:3
P8196_Nate | $5400 | [7F] [10B] [7A] [11F] [2F] [6B] | T:4

P8196_Nate [Choose Tile: [7F] [10B] [7A] [11F] [2F] [6B]]
`;

exports[`Game Play > (22) Player 8196_Nate places tile [2F] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5400 | [6A] [2A] [2E] [1H] [5F] [4G] | T:3
P8196_Nate | $5400 | [7F] [10B] [7A] [11F] [6B] | T:4

P8196_Nate [Choose Shares: T] [End Turn]
`;

exports[`Game Play > (23) Player 8196_Nate purchases Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5400 | [6A] [2A] [2E] [1H] [5F] [4G] | T:3
P8196_Nate | $5200 | [7F] [10B] [7A] [11F] [6B] | T:5

P8196_Nate [Choose Shares: T] [End Turn]
`;

exports[`Game Play > (24) Player 8196_Nate purchases Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5400 | [6A] [2A] [2E] [1H] [5F] [4G] | T:3
P8196_Nate | $5000 | [7F] [10B] [7A] [11F] [6B] | T:6

P8196_Nate [Choose Shares: T] [End Turn]
`;

exports[`Game Play > (25) Player 8196_Nate purchases Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5400 | [6A] [2A] [2E] [1H] [5F] [4G] | T:3
P8196_Nate | $4800 | [7F] [10B] [7A] [11F] [6B] | T:7

P8196_Nate [End Turn]
`;

exports[`Game Play > (26) Player 8196_Nate ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5400 | [6A] [2A] [2E] [1H] [5F] [4G] | T:3
P8196_Nate | $4800 | [7F] [10B] [7A] [11F] [6B] [3E] | T:7

P3792_Matthew [Choose Tile: [6A] [2A] [2E] [1H] [5F] [4G]]
`;

exports[`Game Play > (27) Player 3792_Matthew places tile [2E] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - 0 - - - - - - - - - -
 - 0 - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5400 | [6A] [2A] [1H] [5F] [4G] | T:3
P8196_Nate | $4800 | [7F] [10B] [7A] [11F] [6B] [3E] | T:7

P3792_Matthew [Choose Hotel: A C F I W L]
`;

exports[`Game Play > (28) Player 3792_Matthew starts American 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5400 | [6A] [2A] [1H] [5F] [4G] | A:1 T:3
P8196_Nate | $4800 | [7F] [10B] [7A] [11F] [6B] [3E] | T:7

P3792_Matthew [Choose Shares: A T] [End Turn]
`;

exports[`Game Play > (29) Player 3792_Matthew purchases American 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $5100 | [6A] [2A] [1H] [5F] [4G] | A:2 T:3
P8196_Nate | $4800 | [7F] [10B] [7A] [11F] [6B] [3E] | T:7

P3792_Matthew [Choose Shares: A T] [End Turn]
`;

exports[`Game Play > (30) Player 3792_Matthew purchases American 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4800 | [6A] [2A] [1H] [5F] [4G] | A:3 T:3
P8196_Nate | $4800 | [7F] [10B] [7A] [11F] [6B] [3E] | T:7

P3792_Matthew [Choose Shares: A T] [End Turn]
`;

exports[`Game Play > (31) Player 3792_Matthew purchases American 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4500 | [6A] [2A] [1H] [5F] [4G] | A:4 T:3
P8196_Nate | $4800 | [7F] [10B] [7A] [11F] [6B] [3E] | T:7

P3792_Matthew [End Turn]
`;

exports[`Game Play > (32) Player 3792_Matthew ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4500 | [6A] [2A] [1H] [5F] [4G] [4A] | A:4 T:3
P8196_Nate | $4800 | [7F] [10B] [7A] [11F] [6B] [3E] | T:7

P8196_Nate [Choose Tile: [7F] [10B] [7A] [11F] [6B] [3E]]
`;

exports[`Game Play > (33) Player 8196_Nate places tile [11F] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4500 | [6A] [2A] [1H] [5F] [4G] [4A] | A:4 T:3
P8196_Nate | $4800 | [7F] [10B] [7A] [6B] [3E] | T:7

P8196_Nate [Choose Shares: A T] [End Turn]
`;

exports[`Game Play > (34) Player 8196_Nate purchases American 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4500 | [6A] [2A] [1H] [5F] [4G] [4A] | A:4 T:3
P8196_Nate | $4500 | [7F] [10B] [7A] [6B] [3E] | A:1 T:7

P8196_Nate [Choose Shares: A T] [End Turn]
`;

exports[`Game Play > (35) Player 8196_Nate purchases American 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4500 | [6A] [2A] [1H] [5F] [4G] [4A] | A:4 T:3
P8196_Nate | $4200 | [7F] [10B] [7A] [6B] [3E] | A:2 T:7

P8196_Nate [Choose Shares: A T] [End Turn]
`;

exports[`Game Play > (36) Player 8196_Nate purchases American 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4500 | [6A] [2A] [1H] [5F] [4G] [4A] | A:4 T:3
P8196_Nate | $3900 | [7F] [10B] [7A] [6B] [3E] | A:3 T:7

P8196_Nate [End Turn]
`;

exports[`Game Play > (37) Player 8196_Nate ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4500 | [6A] [2A] [1H] [5F] [4G] [4A] | A:4 T:3
P8196_Nate | $3900 | [7F] [10B] [7A] [6B] [3E] [10A] | A:3 T:7

P3792_Matthew [Choose Tile: [6A] [2A] [1H] [5F] [4G] [4A]]
`;

exports[`Game Play > (38) Player 3792_Matthew places tile [4G] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - 0 - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4500 | [6A] [2A] [1H] [5F] [4A] | A:4 T:3
P8196_Nate | $3900 | [7F] [10B] [7A] [6B] [3E] [10A] | A:3 T:7

P3792_Matthew [Choose Hotel: C F I W L]
`;

exports[`Game Play > (39) Player 3792_Matthew starts Luxor 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4500 | [6A] [2A] [1H] [5F] [4A] | A:4 L:1 T:3
P8196_Nate | $3900 | [7F] [10B] [7A] [6B] [3E] [10A] | A:3 T:7

P3792_Matthew [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (40) Player 3792_Matthew purchases Luxor 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4300 | [6A] [2A] [1H] [5F] [4A] | A:4 L:2 T:3
P8196_Nate | $3900 | [7F] [10B] [7A] [6B] [3E] [10A] | A:3 T:7

P3792_Matthew [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (41) Player 3792_Matthew purchases Tower 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $4100 | [6A] [2A] [1H] [5F] [4A] | A:4 L:2 T:4
P8196_Nate | $3900 | [7F] [10B] [7A] [6B] [3E] [10A] | A:3 T:7

P3792_Matthew [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (42) Player 3792_Matthew purchases American 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3800 | [6A] [2A] [1H] [5F] [4A] | A:5 L:2 T:4
P8196_Nate | $3900 | [7F] [10B] [7A] [6B] [3E] [10A] | A:3 T:7

P3792_Matthew [End Turn]
`;

exports[`Game Play > (43) Player 3792_Matthew ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A - - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3800 | [6A] [2A] [1H] [5F] [4A] [5I] | A:5 L:2 T:4
P8196_Nate | $3900 | [7F] [10B] [7A] [6B] [3E] [10A] | A:3 T:7

P8196_Nate [Choose Tile: [7F] [10B] [7A] [6B] [3E] [10A]]
`;

exports[`Game Play > (44) Player 8196_Nate places tile [3E] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3800 | [6A] [2A] [1H] [5F] [4A] [5I] | A:5 L:2 T:4
P8196_Nate | $3900 | [7F] [10B] [7A] [6B] [10A] | A:3 T:7

P8196_Nate [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (45) Player 8196_Nate purchases Luxor 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3800 | [6A] [2A] [1H] [5F] [4A] [5I] | A:5 L:2 T:4
P8196_Nate | $3700 | [7F] [10B] [7A] [6B] [10A] | A:3 L:1 T:7

P8196_Nate [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (46) Player 8196_Nate purchases Luxor 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3800 | [6A] [2A] [1H] [5F] [4A] [5I] | A:5 L:2 T:4
P8196_Nate | $3500 | [7F] [10B] [7A] [6B] [10A] | A:3 L:2 T:7

P8196_Nate [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (47) Player 8196_Nate purchases Luxor 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3800 | [6A] [2A] [1H] [5F] [4A] [5I] | A:5 L:2 T:4
P8196_Nate | $3300 | [7F] [10B] [7A] [6B] [10A] | A:3 L:3 T:7

P8196_Nate [End Turn]
`;

exports[`Game Play > (48) Player 8196_Nate ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3800 | [6A] [2A] [1H] [5F] [4A] [5I] | A:5 L:2 T:4
P8196_Nate | $3300 | [7F] [10B] [7A] [6B] [10A] [7B] | A:3 L:3 T:7

P3792_Matthew [Choose Tile: [6A] [2A] [1H] [5F] [4A] [5I]]
`;

exports[`Game Play > (49) Player 3792_Matthew places tile [4A] 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3800 | [6A] [2A] [1H] [5F] [5I] | A:5 L:2 T:4
P8196_Nate | $3300 | [7F] [10B] [7A] [6B] [10A] [7B] | A:3 L:3 T:7

P3792_Matthew [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (50) Player 3792_Matthew purchases Tower 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3600 | [6A] [2A] [1H] [5F] [5I] | A:5 L:2 T:5
P8196_Nate | $3300 | [7F] [10B] [7A] [6B] [10A] [7B] | A:3 L:3 T:7

P3792_Matthew [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (51) Player 3792_Matthew purchases Tower 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3400 | [6A] [2A] [1H] [5F] [5I] | A:5 L:2 T:6
P8196_Nate | $3300 | [7F] [10B] [7A] [6B] [10A] [7B] | A:3 L:3 T:7

P3792_Matthew [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (52) Player 3792_Matthew purchases Tower 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3200 | [6A] [2A] [1H] [5F] [5I] | A:5 L:2 T:7
P8196_Nate | $3300 | [7F] [10B] [7A] [6B] [10A] [7B] | A:3 L:3 T:7

P3792_Matthew [End Turn]
`;

exports[`Game Play > (53) Player 3792_Matthew ends turn 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - - - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3200 | [6A] [2A] [1H] [5F] [5I] [8G] | A:5 L:2 T:7
P8196_Nate | $3300 | [7F] [10B] [7A] [6B] [10A] [7B] | A:3 L:3 T:7

P8196_Nate [Choose Tile: [7F] [10B] [7A] [6B] [10A] [7B]]
`;

exports[`Game Play > (54) Player 8196_Nate places tile [7B] 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - 0 - - - - -
 - - - T - - 0 - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3200 | [6A] [2A] [1H] [5F] [5I] [8G] | A:5 L:2 T:7
P8196_Nate | $3300 | [7F] [10B] [7A] [6B] [10A] | A:3 L:3 T:7

P8196_Nate [Choose Hotel: C F I W]
`;

exports[`Game Play > (55) Player 8196_Nate starts Festival 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3200 | [6A] [2A] [1H] [5F] [5I] [8G] | A:5 L:2 T:7
P8196_Nate | $3300 | [7F] [10B] [7A] [6B] [10A] | A:3 F:1 L:3 T:7

P8196_Nate [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (56) Player 8196_Nate purchases Festival 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3200 | [6A] [2A] [1H] [5F] [5I] [8G] | A:5 L:2 T:7
P8196_Nate | $3000 | [7F] [10B] [7A] [6B] [10A] | A:3 F:2 L:3 T:7

P8196_Nate [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (57) Player 8196_Nate purchases Festival 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3200 | [6A] [2A] [1H] [5F] [5I] [8G] | A:5 L:2 T:7
P8196_Nate | $2700 | [7F] [10B] [7A] [6B] [10A] | A:3 F:3 L:3 T:7

P8196_Nate [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (58) Player 8196_Nate purchases Festival 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3200 | [6A] [2A] [1H] [5F] [5I] [8G] | A:5 L:2 T:7
P8196_Nate | $2400 | [7F] [10B] [7A] [6B] [10A] | A:3 F:4 L:3 T:7

P8196_Nate [End Turn]
`;

exports[`Game Play > (59) Player 8196_Nate ends turn 1`] = `
 - - - 0 - - - - - - 0 -
 - - - - - - F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3200 | [6A] [2A] [1H] [5F] [5I] [8G] | A:5 L:2 T:7
P8196_Nate | $2400 | [7F] [10B] [7A] [6B] [10A] [2D] | A:3 F:4 L:3 T:7

P3792_Matthew [Choose Tile: [6A] [2A] [1H] [5F] [5I] [8G]]
`;

exports[`Game Play > (60) Player 3792_Matthew places tile [6A] 1`] = `
 - - - 0 - 0 - - - - 0 -
 - - - - - - F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $3200 | [2A] [1H] [5F] [5I] [8G] | A:5 L:2 T:7
P8196_Nate | $2400 | [7F] [10B] [7A] [6B] [10A] [2D] | A:3 F:4 L:3 T:7

P3792_Matthew [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (61) Player 3792_Matthew purchases American 1`] = `
 - - - 0 - 0 - - - - 0 -
 - - - - - - F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $2800 | [2A] [1H] [5F] [5I] [8G] | A:6 L:2 T:7
P8196_Nate | $2400 | [7F] [10B] [7A] [6B] [10A] [2D] | A:3 F:4 L:3 T:7

P3792_Matthew [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (62) Player 3792_Matthew purchases American 1`] = `
 - - - 0 - 0 - - - - 0 -
 - - - - - - F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $2400 | [2A] [1H] [5F] [5I] [8G] | A:7 L:2 T:7
P8196_Nate | $2400 | [7F] [10B] [7A] [6B] [10A] [2D] | A:3 F:4 L:3 T:7

P3792_Matthew [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (63) Player 3792_Matthew purchases American 1`] = `
 - - - 0 - 0 - - - - 0 -
 - - - - - - F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $2000 | [2A] [1H] [5F] [5I] [8G] | A:8 L:2 T:7
P8196_Nate | $2400 | [7F] [10B] [7A] [6B] [10A] [2D] | A:3 F:4 L:3 T:7

P3792_Matthew [End Turn]
`;

exports[`Game Play > (64) Player 3792_Matthew ends turn 1`] = `
 - - - 0 - 0 - - - - 0 -
 - - - - - - F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $2000 | [2A] [1H] [5F] [5I] [8G] [1I] | A:8 L:2 T:7
P8196_Nate | $2400 | [7F] [10B] [7A] [6B] [10A] [2D] | A:3 F:4 L:3 T:7

P8196_Nate [Choose Tile: [7F] [10B] [7A] [6B] [10A] [2D]]
`;

exports[`Game Play > (65) Player 8196_Nate places tile [6B] 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $2000 | [2A] [1H] [5F] [5I] [8G] [1I] | A:8 L:2 T:7
P8196_Nate | $2400 | [7F] [10B] [7A] [10A] [2D] | A:3 F:4 L:3 T:7

P8196_Nate [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (66) Player 8196_Nate purchases Tower 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $2000 | [2A] [1H] [5F] [5I] [8G] [1I] | A:8 L:2 T:7
P8196_Nate | $2200 | [7F] [10B] [7A] [10A] [2D] | A:3 F:4 L:3 T:8

P8196_Nate [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (67) Player 8196_Nate purchases Tower 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $2000 | [2A] [1H] [5F] [5I] [8G] [1I] | A:8 L:2 T:7
P8196_Nate | $2000 | [7F] [10B] [7A] [10A] [2D] | A:3 F:4 L:3 T:9

P8196_Nate [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (68) Player 8196_Nate purchases Tower 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $2000 | [2A] [1H] [5F] [5I] [8G] [1I] | A:8 L:2 T:7
P8196_Nate | $1800 | [7F] [10B] [7A] [10A] [2D] | A:3 F:4 L:3 T:10

P8196_Nate [End Turn]
`;

exports[`Game Play > (69) Player 8196_Nate ends turn 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - - - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $2000 | [2A] [1H] [5F] [5I] [8G] [1I] | A:8 L:2 T:7
P8196_Nate | $1800 | [7F] [10B] [7A] [10A] [2D] [9D] | A:3 F:4 L:3 T:10

P3792_Matthew [Choose Tile: [2A] [1H] [5F] [5I] [8G] [1I]]
`;

exports[`Game Play > (70) Player 3792_Matthew places tile [5F] 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $2000 | [2A] [1H] [5I] [8G] [1I] | A:8 L:2 T:7
P8196_Nate | $1800 | [7F] [10B] [7A] [10A] [2D] [9D] | A:3 F:4 L:3 T:10

P3792_Matthew [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (71) Player 3792_Matthew purchases American 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $1600 | [2A] [1H] [5I] [8G] [1I] | A:9 L:2 T:7
P8196_Nate | $1800 | [7F] [10B] [7A] [10A] [2D] [9D] | A:3 F:4 L:3 T:10

P3792_Matthew [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (72) Player 3792_Matthew purchases American 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $1200 | [2A] [1H] [5I] [8G] [1I] | A:10 L:2 T:7
P8196_Nate | $1800 | [7F] [10B] [7A] [10A] [2D] [9D] | A:3 F:4 L:3 T:10

P3792_Matthew [Choose Shares: A F T L] [End Turn]
`;

exports[`Game Play > (73) Player 3792_Matthew purchases American 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $800 | [2A] [1H] [5I] [8G] [1I] | A:11 L:2 T:7
P8196_Nate | $1800 | [7F] [10B] [7A] [10A] [2D] [9D] | A:3 F:4 L:3 T:10

P3792_Matthew [End Turn]
`;

exports[`Game Play > (74) Player 3792_Matthew ends turn 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - - - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $800 | [2A] [1H] [5I] [8G] [1I] [5E] | A:11 L:2 T:7
P8196_Nate | $1800 | [7F] [10B] [7A] [10A] [2D] [9D] | A:3 F:4 L:3 T:10

P8196_Nate [Choose Tile: [7F] [10B] [7A] [10A] [2D] [9D]]
`;

exports[`Game Play > (75) Player 8196_Nate places tile [9D] 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - 0 - - -
 - - - T - 0 - - 0 - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $800 | [2A] [1H] [5I] [8G] [1I] [5E] | A:11 L:2 T:7
P8196_Nate | $1800 | [7F] [10B] [7A] [10A] [2D] | A:3 F:4 L:3 T:10

P8196_Nate [Choose Hotel: C I W]
`;

exports[`Game Play > (76) Player 8196_Nate starts Worldwide 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $800 | [2A] [1H] [5I] [8G] [1I] [5E] | A:11 L:2 T:7
P8196_Nate | $1800 | [7F] [10B] [7A] [10A] [2D] | A:3 F:4 L:3 T:10 W:1

P8196_Nate [Choose Shares: A F W T L] [End Turn]
`;

exports[`Game Play > (77) Player 8196_Nate purchases Worldwide 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $800 | [2A] [1H] [5I] [8G] [1I] [5E] | A:11 L:2 T:7
P8196_Nate | $1500 | [7F] [10B] [7A] [10A] [2D] | A:3 F:4 L:3 T:10 W:2

P8196_Nate [Choose Shares: A F W T L] [End Turn]
`;

exports[`Game Play > (78) Player 8196_Nate purchases Worldwide 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $800 | [2A] [1H] [5I] [8G] [1I] [5E] | A:11 L:2 T:7
P8196_Nate | $1200 | [7F] [10B] [7A] [10A] [2D] | A:3 F:4 L:3 T:10 W:3

P8196_Nate [Choose Shares: A F W T L] [End Turn]
`;

exports[`Game Play > (79) Player 8196_Nate purchases Worldwide 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $800 | [2A] [1H] [5I] [8G] [1I] [5E] | A:11 L:2 T:7
P8196_Nate | $900 | [7F] [10B] [7A] [10A] [2D] | A:3 F:4 L:3 T:10 W:4

P8196_Nate [End Turn]
`;

exports[`Game Play > (80) Player 8196_Nate ends turn 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - - - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $800 | [2A] [1H] [5I] [8G] [1I] [5E] | A:11 L:2 T:7
P8196_Nate | $900 | [7F] [10B] [7A] [10A] [2D] [8H] | A:3 F:4 L:3 T:10 W:4

P3792_Matthew [Choose Tile: [2A] [1H] [5I] [8G] [1I] [5E]]
`;

exports[`Game Play > (81) Player 3792_Matthew places tile [5E] 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - 0 - - - - - - -
 - A - - 0 - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $800 | [2A] [1H] [5I] [8G] [1I] | A:11 L:2 T:7
P8196_Nate | $900 | [7F] [10B] [7A] [10A] [2D] [8H] | A:3 F:4 L:3 T:10 W:4

P3792_Matthew [Choose Hotel: C I]
`;

exports[`Game Play > (82) Player 3792_Matthew starts Continental 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $800 | [2A] [1H] [5I] [8G] [1I] | A:11 C:1 L:2 T:7
P8196_Nate | $900 | [7F] [10B] [7A] [10A] [2D] [8H] | A:3 F:4 L:3 T:10 W:4

P3792_Matthew [Choose Shares: A C F W T L] [End Turn]
`;

exports[`Game Play > (83) Player 3792_Matthew purchases Worldwide 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $500 | [2A] [1H] [5I] [8G] [1I] | A:11 C:1 L:2 T:7 W:1
P8196_Nate | $900 | [7F] [10B] [7A] [10A] [2D] [8H] | A:3 F:4 L:3 T:10 W:4

P3792_Matthew [Choose Shares: A C F W T L] [End Turn]
`;

exports[`Game Play > (84) Player 3792_Matthew purchases Worldwide 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $200 | [2A] [1H] [5I] [8G] [1I] | A:11 C:1 L:2 T:7 W:2
P8196_Nate | $900 | [7F] [10B] [7A] [10A] [2D] [8H] | A:3 F:4 L:3 T:10 W:4

P3792_Matthew [Choose Shares: T L] [End Turn]
`;

exports[`Game Play > (85) Player 3792_Matthew purchases Luxor 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [5I] [8G] [1I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $900 | [7F] [10B] [7A] [10A] [2D] [8H] | A:3 F:4 L:3 T:10 W:4

P3792_Matthew [End Turn]
`;

exports[`Game Play > (86) Player 3792_Matthew ends turn 1`] = `
 - - - 0 - F - - - - 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [5I] [8G] [1I] [11E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $900 | [7F] [10B] [7A] [10A] [2D] [8H] | A:3 F:4 L:3 T:10 W:4

P8196_Nate [Choose Tile: [7F] [10B] [7A] [10A] [2D] [8H]]
`;

exports[`Game Play > (87) Player 8196_Nate places tile [10A] 1`] = `
 - - - 0 - F - - - 0 0 -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [5I] [8G] [1I] [11E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $900 | [7F] [10B] [7A] [2D] [8H] | A:3 F:4 L:3 T:10 W:4

P8196_Nate [Choose Hotel: I]
`;

exports[`Game Play > (88) Player 8196_Nate starts Imperial 1`] = `
 - - - 0 - F - - - I I -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [5I] [8G] [1I] [11E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $900 | [7F] [10B] [7A] [2D] [8H] | A:3 F:4 I:1 L:3 T:10 W:4

P8196_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (89) Player 8196_Nate purchases Continental 1`] = `
 - - - 0 - F - - - I I -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [5I] [8G] [1I] [11E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $500 | [7F] [10B] [7A] [2D] [8H] | A:3 C:1 F:4 I:1 L:3 T:10 W:4

P8196_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (90) Player 8196_Nate purchases Continental 1`] = `
 - - - 0 - F - - - I I -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [5I] [8G] [1I] [11E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [10B] [7A] [2D] [8H] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [End Turn]
`;

exports[`Game Play > (91) Player 8196_Nate ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - - - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [5I] [8G] [1I] [11E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [10B] [7A] [2D] [8H] [3G] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [Choose Tile: [2A] [1H] [5I] [8G] [1I] (unavailable: [11E])]
`;

exports[`Game Play > (92) Player 3792_Matthew places tile [5I] 1`] = `
 - - - 0 - F - - - I I -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [10B] [7A] [2D] [8H] [3G] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [End Turn]
`;

exports[`Game Play > (93) Player 3792_Matthew ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - - L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [5B] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [10B] [7A] [2D] [8H] [3G] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [Choose Tile: [7F] [10B] [7A] [2D] [8H] [3G]]
`;

exports[`Game Play > (94) Player 8196_Nate places tile [3G] 1`] = `
 - - - 0 - F - - - I I -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [5B] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [10B] [7A] [2D] [8H] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [End Turn]
`;

exports[`Game Play > (95) Player 8196_Nate ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - - F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [5B] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [10B] [7A] [2D] [8H] [9I] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [Choose Tile: [2A] [1H] [8G] [1I] [5B] (unavailable: [11E])]
`;

exports[`Game Play > (96) Player 3792_Matthew places tile [5B] 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [10B] [7A] [2D] [8H] [9I] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [End Turn]
`;

exports[`Game Play > (97) Player 3792_Matthew ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - - - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [6E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [10B] [7A] [2D] [8H] [9I] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [Choose Tile: [7F] [10B] [7A] [2D] [8H] [9I]]
`;

exports[`Game Play > (98) Player 8196_Nate places tile [10B] 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [6E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [7A] [2D] [8H] [9I] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [End Turn]
`;

exports[`Game Play > (99) Player 8196_Nate ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - - - T - 0 - - W - - -
 - A A - C - - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [6E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [7A] [2D] [8H] [9I] [12D] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [Choose Tile: [2A] [1H] [8G] [1I] [6E] (unavailable: [11E])]
`;

exports[`Game Play > (100) Player 3792_Matthew places tile [6E] 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - - - T - C - - W - - -
 - A A - C C - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [7A] [2D] [8H] [9I] [12D] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [End Turn]
`;

exports[`Game Play > (101) Player 3792_Matthew ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - - - T - C - - W - - -
 - A A - C C - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [4I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [7A] [2D] [8H] [9I] [12D] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [Choose Tile: [7F] [7A] [2D] [8H] [9I] [12D]]
`;

exports[`Game Play > (102) Player 8196_Nate places tile [2D] 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - C - - W - - -
 - A A - C C - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [4I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [7A] [8H] [9I] [12D] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [End Turn]
`;

exports[`Game Play > (103) Player 8196_Nate ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - C - - W - - -
 - A A - C C - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - - 0 - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [4I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [7A] [8H] [9I] [12D] [11G] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [Choose Tile: [2A] [1H] [8G] [1I] [4I] (unavailable: [11E])]
`;

exports[`Game Play > (104) Player 3792_Matthew places tile [4I] 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - C - - W - - -
 - A A - C C - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [7A] [8H] [9I] [12D] [11G] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [End Turn]
`;

exports[`Game Play > (105) Player 3792_Matthew ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - C - - W - - -
 - A A - C C - - - - - -
 - A - - C - - - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [10G] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7F] [7A] [8H] [9I] [12D] [11G] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [Choose Tile: [7F] [7A] [8H] [9I] [12D] (unavailable: [11G])]
`;

exports[`Game Play > (106) Player 8196_Nate places tile [7F] 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - C - - W - - -
 - A A - C C - - - - - -
 - A - - C - 0 - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [10G] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7A] [8H] [9I] [12D] [11G] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [End Turn]
`;

exports[`Game Play > (107) Player 8196_Nate ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - C - - W - - -
 - A A - C C - - - - - -
 - A - - C - 0 - - - 0 -
 - - L L - - - - - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [8G] [1I] [11E] [10G] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7A] [8H] [9I] [12D] [11G] [4E] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [Choose Tile: [2A] [1H] [8G] [1I] [10G] (unavailable: [11E])]
`;

exports[`Game Play > (108) Player 3792_Matthew places tile [8G] 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - C - - W - - -
 - A A - C C - - - - - -
 - A - - C - 0 - - - 0 -
 - - L L - - - 0 - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [1I] [11E] [10G] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7A] [8H] [9I] [12D] [11G] [4E] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [End Turn]
`;

exports[`Game Play > (109) Player 3792_Matthew ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - C - - W - - -
 - A A - C C - - - - - -
 - A - - C - 0 - - - 0 -
 - - L L - - - 0 - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [1I] [11E] [10G] [10I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7A] [8H] [9I] [12D] [11G] [4E] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [Choose Tile: [7A] [9I] [12D] [4E] (unavailable: [8H] [11G])]
`;

exports[`Game Play > (110) Player 8196_Nate places tile [4E] 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - C - - W - - -
 - A A 0 C C - - - - - -
 - A - - C - 0 - - - 0 -
 - - L L - - - 0 - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $0 | [2A] [1H] [1I] [11E] [10G] [10I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $100 | [7A] [8H] [9I] [12D] [11G] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [Merge: A C]
`;

exports[`Game Play > (111) Player 8196_Nate merges Continental into American 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - A - - W - - -
 - A A A A A - - - - - -
 - A - - A - 0 - - - 0 -
 - - L L - - - 0 - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $3000 | [2A] [1H] [1I] [11E] [10G] [10I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $6100 | [7A] [8H] [9I] [12D] [11G] | A:3 C:2 F:4 I:1 L:3 T:10 W:4

P8196_Nate [Sell (1/2) Continental Share] [Keep (1/2) Continental Share] [Trade (2/2) Continental for 1 American]
`;

exports[`Game Play > (112) Player 8196_Nate trades 2 Continental -> American 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - A - - W - - -
 - A A A A A - - - - - -
 - A - - A - 0 - - - 0 -
 - - L L - - - 0 - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $3000 | [2A] [1H] [1I] [11E] [10G] [10I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $6100 | [7A] [8H] [9I] [12D] [11G] | A:4 F:4 I:1 L:3 T:10 W:4

P3792_Matthew [Sell (1/1) Continental Share] [Keep (1/1) Continental Share]
`;

exports[`Game Play > (113) Player 3792_Matthew keeps 1 orphaned Continental share 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - A - - W - - -
 - A A A A A - - - - - -
 - A - - A - 0 - - - 0 -
 - - L L - - - 0 - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $3000 | [2A] [1H] [1I] [11E] [10G] [10I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $6100 | [7A] [8H] [9I] [12D] [11G] | A:4 F:4 I:1 L:3 T:10 W:4

P8196_Nate [Choose Shares: A F I W T L] [End Turn]
`;

exports[`Game Play > (114) Player 8196_Nate purchases Luxor 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - A - - W - - -
 - A A A A A - - - - - -
 - A - - A - 0 - - - 0 -
 - - L L - - - 0 - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $3000 | [2A] [1H] [1I] [11E] [10G] [10I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $5600 | [7A] [8H] [9I] [12D] [11G] | A:4 F:4 I:1 L:4 T:10 W:4

P8196_Nate [Choose Shares: A F I W T L] [End Turn]
`;

exports[`Game Play > (115) Player 8196_Nate purchases Luxor 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - A - - W - - -
 - A A A A A - - - - - -
 - A - - A - 0 - - - 0 -
 - - L L - - - 0 - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $3000 | [2A] [1H] [1I] [11E] [10G] [10I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $5100 | [7A] [8H] [9I] [12D] [11G] | A:4 F:4 I:1 L:5 T:10 W:4

P8196_Nate [Choose Shares: A F I W T L] [End Turn]
`;

exports[`Game Play > (116) Player 8196_Nate purchases Luxor 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - A - - W - - -
 - A A A A A - - - - - -
 - A - - A - 0 - - - 0 -
 - - L L - - - 0 - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $3000 | [2A] [1H] [1I] [11E] [10G] [10I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $4600 | [7A] [8H] [9I] [12D] [11G] | A:4 F:4 I:1 L:6 T:10 W:4

P8196_Nate [End Turn]
`;

exports[`Game Play > (117) Player 8196_Nate ends turn 1`] = `
 - - - 0 - F - - - I I -
 - - - - F F F - - I - -
 - - - T - - F - W - - -
 - A - T - A - - W - - -
 - A A A A A - - - - - -
 - A - - A - 0 - - - 0 -
 - - L L - - - 0 - - - -
 - - - L - - - - - - - -
 - - - L L - - - - - - -

P3792_Matthew | $3000 | [2A] [1H] [1I] [11E] [10G] [10I] | A:11 C:1 L:3 T:7 W:2
P8196_Nate | $4600 | [7A] [8H] [9I] [12D] [11G] [3A] | A:4 F:4 I:1 L:6 T:10 W:4

P3792_Matthew [Choose Tile: [2A] [1H] [1I] [11E] [10G] [10I]]
`;
